--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -6,7 +6,7 @@
   border-radius: 5px;
   color: #adaeb9;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0, 25),
-    0 8px 16px --8px rgba(0, 0, 0, 0, 3), 0, -6px 17px -6px rgba(0, 0, 0, 0, 25);
+    0 8px 16px -8px rgba(0, 0, 0, 0.3), 0, -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
 
 .movies .movie a {
@@ -23,8 +23,8 @@
   max-width: 150px;
   width: 100%;
   margin-right: 30px;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0, 25),
-    0 18px 36px -18px rgba(0, 0, 0, 0, 3), 0 -12px 36px -px rgba(0, 0, 0, 0, 25);
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
 .movies .movie_title,
