--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,6 +1,6 @@
 .container {
   height: 100%;
-  display: flex;
+  display: flex; 
   justify-content: center;
 }
 
@@ -16,9 +16,10 @@
 .movies {
   display: grid;
   grid-template-columns: repeat(2, minmax(400px, 1fr));
-  grid-gap: 100%;
+  grid-gap: 100px;
   padding: 50px;
   width: 80%;
+  /* background-color: red; */
   padding-top: 70px;
 }
 
@@ -26,5 +27,5 @@
   .movies {
     grid-template-columns: 1fr;
     width: 100%;
-  }
+  } 
 }
